--- a/src/app/sign-up-form/sign-up-form.component.html
+++ b/src/app/sign-up-form/sign-up-form.component.html
@@ -1,28 +1,33 @@
 <form [formGroup]="contactForm" (ngSubmit)="onSubmit()">
+<header>
+  Sign Up Form
+</header>
+  <div class="main">
+
 
   <p>
-    <label for="firstname">First Name </label>
+    <label for="firstname">First Name * </label>
     <input type="text" id="firstname" name="firstname" formControlName="firstname">
   </p>
 
   <p>
-    <label for="lastname">Last Name </label>
+    <label for="lastname">Last Name * </label>
     <input type="text" id="lastname" name="lastname" formControlName="lastname">
   </p>
 
   <p>
-    <label for="email">Email </label>
+    <label for="email">Email * </label>
     <input type="text" id="email" name="email" formControlName="email">
   </p>
 
 
   <p>
-    <label for="email">Password </label>
+    <label for="email">Password * </label>
     <input type="text" id="password" name="email" formControlName="password">
   </p>
 
   <p>
     <button type="submit">Submit</button>
   </p>
-
+  </div>
 </form>
